fix horizontal scroll bug

--- a/packages/client/src/components/header/header.module.scss
+++ b/packages/client/src/components/header/header.module.scss
@@ -2,7 +2,6 @@
 
 .root {
   height: $header-height;
-  width: 100vw;
   font: $text-font;
   padding: 1rem;
   display: flex;
