--- a/packages/client/src/styles/util-classes.scss
+++ b/packages/client/src/styles/util-classes.scss
@@ -10,4 +10,5 @@
 
 .page {
   flex-grow: 1;
+  z-index: 0;
 }
